--- a/zmon-controller-ui/styles/main.css
+++ b/zmon-controller-ui/styles/main.css
@@ -281,7 +281,7 @@ div.popover
 
 .gauge-wrapper
 {
-    height: 190px;
+    /*height: 190px;*/
 }
 
 .table
